# tird

./: .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: bandit.yml  checkmarx.yml  codacy.yml  codeql.yml  dependency-review.yml  pysa.yml  semgrep.yml  trivy.yml
deb/DEBIAN/: control
distribution/DEBIAN/: control
docs/: FAQ.md  INPUT_OPTIONS.md  INSTALLATION.md  MANPAGE.md  SPECIFICATION.md  tird.1
docs/examples/: 0.md  1.md  8.md  9.md  README.md
docs/input_options/: A0.md  D1.md  D2.md  D3.md  D4.md  D5.md  D6.md  K1.md  K2.md  K3.md  P0.md  README.md
docs/tutorial/: 0.md  1.md  23.md  23c.md  8.md  9.md  README.md  TLE.md  basics.md  creating_keyfiles.md  encrypting_files.md  writing_iso_image.md
src/tird/: tird.py
tird/: tird.py
