[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [
    "src",
]

[project]
name = "tird"
version = "0.19.0"
license = { file = "LICENSE" }
maintainers = [
    { name = "Alexey Avramov", email = "hakavlad@gmail.com" },
]
description = "A file encryption tool focused on minimizing metadata and hiding encrypted data"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "encryption",
    "file-encryption",
    "hiding",
    "data-hiding",
    "plausible-deniability",
    "deniable-encryption",
    "purb",
    "time-lock",
    "undetectable",
    "stealth",
    "steganography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=2.1",
    "pynacl>=1.2.0",
]
requires-python = ">=3.9.2"

[project.urls]
"Bug Tracker" = "https://github.com/hakavlad/tird/issues"
"Discussions" = "https://github.com/hakavlad/tird/discussions"
"Documentation" = "https://github.com/hakavlad/tird/blob/main/README.md"
"Homepage" = "https://github.com/hakavlad/tird"
"Repository" = "https://github.com/hakavlad/tird"

[project.scripts]
tird = "tird.tird:main"
